--- a/4-Singup/css/button.css
+++ b/4-Singup/css/button.css
@@ -2,7 +2,7 @@
 .button {
   background-color: blue; 
   border-radius: 10px;
-  color: white;
+  color: black;
   padding: 20 px;
   text-align: center;
   text-decoration: none;
