--- a/4-Singup/css/main.css
+++ b/4-Singup/css/main.css
@@ -1,4 +1,5 @@
-body{  
+body{ 
+    background-color: cornflowerblue; 
 }
 
 .container {
@@ -19,14 +20,18 @@ body{
 }
 a{ 
     color: cornsilk;
+    text-decoration: none;
 
 }
 
 .right-column {
     display: inline-block;
-    float:right;
+    float: right;
     width: 60%;
     font-weight: bold;
     background-color: #fff;
+    padding: 50px;
+    padding-bottom: 20;
 }
-
+.close {
+}
