--- a/4-Singup/css/main.css
+++ b/4-Singup/css/main.css
@@ -10,9 +10,9 @@ body{
 }
  .left-column{
     display: inline-block;
-    float:left;
     box-sizing: border-box;
     width: calc (40% - 110px);
+    float: left;
     background-color:#5780D9 ;
     color: cornsilk;
     padding: 50px;
@@ -26,12 +26,12 @@ a{
 
 .right-column {
     display: inline-block;
-    float: right;
+    float: left;
     width: 60%;
     font-weight: bold;
     background-color: #fff;
     padding: 50px;
-    padding-bottom: 20;
+    padding-bottom: 20px;
 }
 .close {
 }
