--- a/4-Singup/css/reset.css
+++ b/4-Singup/css/reset.css
@@ -1,7 +1,7 @@
 body,
 body * {
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     box-sizing: border-box;   
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
