--- a/4-Singup/css/main.css
+++ b/4-Singup/css/main.css
@@ -11,9 +11,13 @@ body{
  .left-column{
     display: inline-block;
     box-sizing: border-box;
-    width: calc (40% - 110px);
+    width: 40%;
     float: left;
     background-color:#5780D9 ;
+    background-image: url(../background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top left;
     color: cornsilk;
     padding: 10px;
     padding-bottom: 10px;
@@ -30,13 +34,17 @@ a{
     width: 60%;
     font-weight: bold;
     background-color: #fff;
-    padding: 10px;
+    padding: 60px;
     padding-bottom: 20px;
 }
 .close {
-        cursor: pointer;
-        position:absolute;
+       height: 60px;
+       width: 60px;
+       margin-left: 360px;
+       margin-top: -60px;
+       position:absolute;
+       cursor: pointer;
     
-
+      
         
 }
