--- a/4-Singup/css/button.css
+++ b/4-Singup/css/button.css
@@ -1,14 +1,19 @@
 
-.button {
-  background-color: blue; 
-  border-radius: 10px;
-  color: black;
-  padding: 20 px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  position: absolute;
-  bottom: 20px;
-  
-    }
+form> .form-row > button {
+  font-size: 15px;
+  line-height: 26px;
+  text-transform: capitalize;
+  padding: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 18px;
+  background-color: #005dd8;
+  color: #fff;
+  border-color: none;
+  cursor: pointer;
+}
+form> .form-row > button:hover {
+  cursor:pionter;
+  background: #0265de;
+  background: linear-gradient(53deg, #0265de 0%, #2348d4 100%);
+}
