--- a/4-Singup/css/reset.css
+++ b/4-Singup/css/reset.css
@@ -2,5 +2,5 @@ body,
 body * {
     padding: 10px;
     box-sizing: border-box;   
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
