--- a/Fcuksense/main.css
+++ b/Fcuksense/main.css
@@ -1,6 +1,7 @@
 
 .pavadinimas{
   color: blue;
+  font-size: 20px;
 }
 .container {
     display: grid;
@@ -14,3 +15,29 @@
   .form-row {
     padding: 10px;
   }
+  .button {
+    background-color: rgb(60, 34, 134);
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 5px 2px;
+    cursor: pointer;
+  }
+  .a{
+  background-color: #fff;
+  border-color: blue;
+  color: blue;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+  
