--- a/Fcuksense/main.css
+++ b/Fcuksense/main.css
@@ -27,16 +27,22 @@
     margin: 5px 2px;
     cursor: pointer;
   }
+
+  .a1{
+    text-decoration: none;
+    padding: 50px;
+    color: grey;
+  }
   .a{
-  background-color: #fff;
-  border-color: blue;
+  background-color:#fff;
+  border-style: solid;
   color: blue;
-  padding: 15px 32px;
+  padding: 15px 30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  font-size: 15px;
+  margin: 5px 2px;
   cursor: pointer;
 }
 
