--- a/Fcuksense/main.css
+++ b/Fcuksense/main.css
@@ -2,22 +2,32 @@
 .pavadinimas{
   color: blue;
   font-size: 20px;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 100px;
+  margin-bottom: 80px;
 }
 .container {
     display: grid;
-    width: 1200px;
-    padding: 10px;
-    height: 400px; 
+    width: 1000px;
+    padding: 50px;
+    height: 600px; 
     margin: auto;
     grid-template-columns: 40% 60%;
+  }
+
+  .left-column {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
   }
   
   .form-row {
     padding: 10px;
- 
   }
+
+  .please {
+    color: grey;
+  }
+ 
+
   .button {
     background-color: rgb(60, 34, 134);
     border: none;
