--- a/Coming-soon/main.css
+++ b/Coming-soon/main.css
@@ -1,20 +1,30 @@
+:root {
+--main-color: #32ACF1;
+--secondary-color: #EA1E63;
+}
+
 .body{ 
-  display: grid;
+  display: inline-block;
   width: 1000px;
   height: 600px; 
   text-align: center;
 }
 
 .container {
-  display: grid;
+  display: inline-block;
   float: left;
-  width: 700px;
+  width: 1000px;
   padding: 50px;
   height: 600px; 
-  margin: auto;
+  margin: 0 calc(50% - 500px);
   grid-template-columns: 50% 50%;
 }
-
+.container > .row {
+  width: 1000px;
+}
+.container >small-row {
+  width: 600px;
+}
 .left-column { 
     display: grid;
 }
@@ -23,3 +33,4 @@
     display: grid;
 
 }
+@media ( max-width: 1100px) {}
