--- a/7-coming-soon/css/custom.css
+++ b/7-coming-soon/css/custom.css
@@ -1,9 +1,18 @@
+30-grupe-coming-soon/css/custom.css
+@belauzas
+belauzas Back to top #13
+Latest commit bd1ddad 23 hours ago
+ History
+ 1 contributor
+166 lines (144 sloc)  2.63 KB
+  
 /* base */
 @import './base/reset.css';
 @import './base/variables.css';
 @import './base/layout.css';
 
 /* 3rd-party */
+@import './3rd-party/font-awesome.min.css';
 
 /* components */
 @import './components/button.css';
@@ -33,7 +42,7 @@
 }
 
 .hero .logo {
-  height: 80px;
+  height: 40px;
   margin-bottom: 40px;
 }
 
@@ -101,3 +110,65 @@ main .section-description > a:hover {
 }
 
 /* footer section */
+footer.container {
+  padding-top: 0;
+  text-align: center;
+  color: #fffc;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.socials {
+  padding: 15px 0;
+  border-bottom: 1px solid #fff;
+  position: relative;
+}
+.socials > a {
+  width: 40px;
+  height: 40px;
+  margin: 10px;
+  line-height: 40px;
+  font-size: 22px;
+  border-radius: 50%;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+.socials > a:hover {
+  background-color: #fff;
+  color: var(--primary-color);
+}
+
+footer .back-to-top {
+  background-color: var(--secondary-color);
+  color: #fff;
+  position: absolute;
+  top: -25px;
+  right: -14px;
+  margin: 0;
+}
+footer .back-to-top:hover {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
+
+.footer-logo {
+  margin: 30px 0;
+}
+.footer-trio {
+  display: flex;
+  justify-content: center;
+  gap: 0 20px;
+}
+.footer-trio > .item {
+}
+.footer-description {
+}
+footer a {
+  color: #fff;
+}
+
+@media (max-width: 640px) {
+  .footer-trio {
+    flex-direction: column;
+  }
+}
